<resources>
    <string name="app_name">PI2 PDM</string>
    <string name="login_registered">Você já tem uma conta?</string>
    <string name="register_title">Crie sua conta</string>
    <string name="register_terms">Ao criar sua conta, você está concordando com nossos <u>Termos de uso</u> e <u>Política de Privacidade</u></string>
    <string name="forgot_instructions">Preencha seu email e envie. Em segundos você receberá um link de recuperação de senha.</string>
    <string name="teste_pelo_editor">VALOR DO EDITOR</string>
    <string name="hint_matricula">Matrícula</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="txt_new_user"><u>Novo usuário? Crie uma conta</u></string>
    <string name="txt_forgot_password">Equeceu a Senha?</string>
    <string name="tx_forgot_password_title">Recupere sua senha</string>
    <string name="btn_forgot">ENVIAR</string>
    <string name="hint_repeat_password">Repita a senha</string>
    <string name="texto_para_home">AUTENT OK! BEM-VINDE!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment4">FRAGMENT 1</string>
    <string name="hello_blank_fragment2">FRAGMENT 2</string>
    <string name="hello_blank_fragment3">FRAGMENT 3</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>